--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,51 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    margin-bottom: 10px;
+}
+
+html {
+	font-size: 14px;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    min-height: 100%;
+    margin-bottom: -150px;
+}
+
+.buffer {
+	height: 150px;
+}
+
 div.product {
 	float: left;
 	width: 33%;
 }
 
 footer {
+	border: 1px solid red;
 	clear: both;
 	height: 150px;
 	padding: 50px 0px 0px 0px;
+}
+
+.em-width {
+	font-size: 0.8rem;
+}
+
+h1 {
+	font-size: 2rem;	
+}
+
+h2 {
+	font-size: 1.5rem;	
 }
